# bolides

./: .gitignore  .readthedocs.yaml  AUTHORS  LICENSE  MANIFEST.in  PYPI.txt  README.rst  pyproject.toml  setup.py
binder/: README.txt  environment.yml  postBuild
bolides/: __init__.py  astro_utils.py  bdf.py  bolide.py  bolidelist.py  constants.py  crs.py  desc.ini  events.py  fov_utils.py  pipeline_utils.py  plotting.py  sdf.py  sources.py  utils.py
bolides/data/: GLM_FOV_edges.nc  glm16_obs.csv  glm17_obs.csv  goes-w.pkl
bolides/data/constellations/: README.txt  anutan.csv  aztec.csv  belarusian.csv  boorong.csv  chinese.csv  chinese_contemporary.csv  chinese_medieval.csv  egyptian.csv  hawaiian_starlines.csv  indian.csv  inuit.csv  japanese_moon_stations.csv  korean.csv  lokono.csv  macedonian.csv  maori.csv  maya.csv  mongolian.csv  navajo.csv  norse.csv  northern_andes.csv  romanian.csv  russian_siberian.csv  sami.csv  sardinian.csv  tongan.csv  tukano.csv  tupi.csv  western.csv  western_SnT.csv  western_hlad.csv  western_rey.csv
bolides/data/gmn/: 100km.dbf  100km.shp  100km.shx  25km.dbf  25km.shp  25km.shx  70km.dbf  70km.shp  70km.shx  README.txt
bolides/metadata/: columns.csv  glm-pipeline.html  glm.html  usg.html
data/: goes-e.pkl
docs/: README.txt  conf.py  index.rst  installation.rst  requirements.txt
docs/_templates/: footer.html
docs/reference/: bdf.rst  crs.rst  fov_utils.rst  index.rst  sdf.rst
docs/reference/api/: bolides.BolideDataFrame.clip_boundary.rst  bolides.BolideDataFrame.filter_date.rst  bolides.BolideDataFrame.filter_observation.rst  bolides.BolideDataFrame.plot_dates.rst  bolides.BolideDataFrame.plot_density.rst  bolides.BolideDataFrame.plot_detections.rst  bolides.BolideDataFrame.rst  bolides.fov_utils.get_boundary.rst
docs/tutorials/: index.rst  tutorial.ipynb
docs/webapp/: index.rst
notebooks/: youtube-demo.ipynb
webapp/: README.txt  app.py  wsgi.py
webapp/assets/: app.css  main.js
webapp/configs/: flask.conf  flask.service
