[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bolides"
version = "0.4.8"
authors = [
  { name="Anthony Ozerov", email="a.ozerov@columbia.edu" },
]
description = "A package to analyze bolide data"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tqdm",
    "numpy",
    "pandas",
    "ephem",
    "geopandas",
#    "cartopy == 0.18.0.post1",
#    "shapely",
    "matplotlib",
    "lightkurve",
    "netCDF4",
    "pyproj",
    "astropy",
    "simplekml",
    "scikit-learn",
]

[project.urls]
"Homepage" = "https://github.com/jcsmithhere/bolides"
"Bug Tracker" = "https://github.com/jcsmithhere/bolides/issues"
